--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,11 @@ body {
     width: 60%;
 }
 ul {
+    padding: 0;
+    list-style-type: none; 
+}
+nav ul {
     margin: 0;
-    list-style-type: none;
     position: fixed;
     top: 0;
     width: 100%;
@@ -20,21 +23,25 @@ ul {
     background-color: #181012;
 }
   
-li {
+nav ul li {
     float: left;
 }
-  
+
 a {
-    display: block;
-    padding: 1.5vh 1.5vw;
     text-decoration: none;
     text-align: center;
+    color: whitesmoke;
+}
+  
+nav ul li a {
+    display: block;
+    padding: 1.5vh 1.5vw;
     color: white;
 }
 
-a:hover {
+nav ul li a:hover {
     background-color: #C7647B;
 }
-.active {
+nav ul li a.active {
     background-color: #570b40;
 }
